<resources>
    <string name="app_name">QuizApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">history</string>
    <string name="setting">setting</string>
    <string name="questions_a">Questions amount:</string>
    <string name="some_id">10</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="text">Start</string>
    <string name="item_q_btn1_text_example">Colombo</string>
    <string name="minus">-</string>
    <string name="pius">+</string>
    <string name="what_is_the">What is the largest city and commercial capital of Sri Lanka?</string>
    <string name="item_q_btn2_text_example">Moratuwa</string>
    <string name="item_q_btn3_text_example">Negombo</string>
    <string name="item_q_btn4_text_example">Kandy</string>
    <string name="navigation">Geography</string>
    <string name="btn_skip_text">Skip</string>
    <string name="type2_item_q_btn_text">Yes</string>
    <string name="type2_item_q_btn1_text">No</string>
    <string name="history_category">Category:</string>
    <string name="history_text_vivew_category">Mixed</string>
    <string name="correct_ans">Correct answers:</string>
    <string name="text_view_correct_ans">8/10</string>
    <string name="history_difficulty">Difficulty:</string>
    <string name="text_view_difficulty">Easy</string>
    <string name="text_view_data">12 may 2019 20:32</string>
    <string name="btn_finish_text">Finish</string>
    <string name="result">Result</string>
    <string name="category_result">Category:</string>
    <string name="mixed">Mixed</string>
    <string name="result_difficulty">Difficulty:</string>
    <string name="difficulty_example">All</string>
    <string name="result_correct_ans">Correct answers:</string>
    <string name="correct_ans_example">8/10</string>
    <string name="result_tv">Result:</string>
    <string name="result_example">80%</string>
    <string name="version_example">v 1.0.1</string>
    <string name="share_this">Share this app</string>
    <string name="contentdesription">contentDesription</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">delete</string>
    <string name="theme_text">theme</string>

    <string-array name="spinner_category_example">
        <item>Any type</item>
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

</resources>
