<?xml version="1.0" encoding="utf-8"?>

<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="19dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/history_category"
                android:textAppearance="@style/history_text_view_category"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/history_text_vivew_category"
                android:textAppearance="@style/history_text_view_category"
                app:layout_constraintLeft_toRightOf="@id/category"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/correct_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/correct_ans"
                android:textAppearance="@style/correct_ans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category" />


            <TextView
                android:id="@+id/text_view_correct_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/text_view_correct_ans"
                android:textAppearance="@style/correct_ans"
                app:layout_constraintStart_toEndOf="@id/correct_ans"
                app:layout_constraintTop_toTopOf="@id/correct_ans" />


            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/history_difficulty"
                android:textAppearance="@style/correct_ans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/correct_ans" />

            <TextView
                android:id="@+id/text_view_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/text_view_difficulty"
                android:textAppearance="@style/correct_ans"
                app:layout_constraintStart_toEndOf="@id/difficulty"
                app:layout_constraintTop_toTopOf="@id/difficulty" />

            <View
                android:id="@+id/pop_up_menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ic_pop_up_menu_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1sp"
                android:text="@string/text_view_data"
                android:textAppearance="@style/text_view_data"
                android:translationY="-0.63sp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

</layout>
