<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.quizapp.ui.main.MainViewModel" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".ui.main.MainFragment">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_ar_tut" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="117dp"
                android:layout_height="16dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6sp"
                android:text="@string/questions_a"
                android:textAppearance="@style/questions_a" />

            <TextView
                android:id="@+id/text_view_questions_amount"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id" />

            <Button
                android:id="@+id/button_plus_questions_amount"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:onClick="@{() -> viewModel.buttonPlusCLicked()}"
                android:text="@string/pius" />

            <Button
                android:id="@+id/button_minus_questions_amount"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:onClick="@{() -> viewModel.buttonMinusCLicked()}"
                android:text="@string/minus" />


        </LinearLayout>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="68dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="67dp"
            android:max="20"
            android:progress="10" />


        <TextView
            android:id="@+id/category_text_view"
            android:layout_width="81dp"
            android:layout_height="16dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="6sp"
            android:text="@string/category"
            android:textAppearance="@style/category" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="67dp"
            android:elevation="3dp"
            android:entries="@array/spinner_category_example"
            android:popupBackground="@android:drawable/dialog_holo_light_frame" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="81dp"
            android:layout_height="16dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="6sp"
            android:text="@string/difficulty"
            android:textAppearance="@style/difficulty" />

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="67dp"
            android:elevation="3dp"
            android:entries="@array/spinner_category_example"
            android:popupBackground="@android:drawable/dialog_holo_light_frame" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/frame"
            android:onClick="@{() -> viewModel.onButtonStartClick()}"
            android:text="@string/text"
            android:textAppearance="@style/text" />


    </LinearLayout>

</layout>