<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.example.quizapp.models.ResultQuiz" />

        <variable
            name="viewModel"
            type="com.example.quizapp.ui.result_activity.ResultViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.result_activity.ResultActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_question_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/result"
                android:textAppearance="@style/navigation" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/image_view_result"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="71dp"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/contentdesription" />

        <androidx.cardview.widget.CardView
            android:layout_width="342dp"
            android:layout_height="174dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_result"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/result_text_view_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text='@{model.category}'
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="81dp"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/result_difficulty"
                    android:textAppearance="@style/difficulty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/result_text_view_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="1sp"
                    android:text="@{model.difficulty}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/difficulty"
                    app:layout_constraintStart_toStartOf="@id/difficulty"
                    app:layout_constraintTop_toBottomOf="@id/difficulty" />

                <TextView
                    android:id="@+id/correct_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="81dp"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/result_correct_ans"
                    android:textAppearance="@style/difficulty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/result_text_view_correct_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="1sp"
                    android:text="@{model.correctAns}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/correct_ans"
                    app:layout_constraintStart_toStartOf="@id/correct_ans"
                    app:layout_constraintTop_toBottomOf="@id/correct_ans" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="81dp"
                    android:layout_marginEnd="46dp"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/result_tv"
                    android:textAppearance="@style/difficulty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/result_text_view_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="1sp"
                    android:text="@{model.resultPercentage}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/result"
                    app:layout_constraintStart_toStartOf="@id/result"
                    app:layout_constraintTop_toBottomOf="@id/result" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btn_finish"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/btn_finish"
            android:elevation="0dp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:onClick="@{() -> viewModel.onFinishClicked()}"
            android:text="@string/btn_finish_text"
            android:textAppearance="@style/btn_finish_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>